NTI-1261 - Force body overflow visible. The x-viewport body defines a rigid view that does not scroll so it can reason about the viewport bottom simply. We no longer use the viewport for layout. And we want the height of the body to drive scrolling... this makes flyout content drive height if it overflows the view.

--- a/src/main/resources/scss/layout/_main-layout.scss
+++ b/src/main/resources/scss/layout/_main-layout.scss
@@ -45,7 +45,10 @@ html.x-viewport {
 body.x-body {
 	min-height: calc(100vh - #{$header-height});
 	height: auto !important;
-	overflow: hidden !important;
+	// Now that we scroll the window, this needs to force overflow visible. (positioned things that drop
+	// below the frame need to extend the scroll area) If something breaks because of this, don't revert
+	// this, reflow the styles with the thing that breaks.
+	overflow: visible; !important;
 	background: white;
 	background: #343434;
 	background-size: cover;
